fix navbar on mobiles

--- a/src/app/components/about-me/about-me.component.scss
+++ b/src/app/components/about-me/about-me.component.scss
@@ -90,7 +90,6 @@ $second-choise: linear-gradient(to bottom, #9A26FF,#d122c8,#d122c8, #01161E);
         
         @media only screen and (max-width:600px) {
             margin-left: -10%;
-            margin-top: -25%;
             
             .display-5{
                 font-size: 16px;
